# Quantum-Machine-Learning-SGH

./: LICENSE  README.md  commands.md  data.py  data_processor.py  main.py  model.py  projekt.py  pyproject.toml  q_model.py  qtsa_comparison.ipynb  qtsa_comparison.py  train.py  visualize.py
