[project]
name = "quantum-machine-learning-sgh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pennylane>=0.43.2",
    "torch>=2.5.1",
    "yfinance>=0.2.50",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.1",
]
