[project]
name = "quantum-machine-learning-sgh"
version = "1.0.0"
description = "QTSA vs Classical MLP: Binary Classification for Market Direction Prediction - SGH Final Project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SGH Student" }
]
keywords = ["quantum-machine-learning", "pennylane", "time-series", "financial-ml", "classification"]

dependencies = [
    "pennylane>=0.43.2",
    "torch>=2.5.1",
    "yfinance>=0.2.50",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.0",
    "pandas>=2.3.3",
    "numpy>=1.26.0",
    "tqdm>=4.67.1",
    "jupytext>=1.18.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0",
]
